# lebedev_generator

./: CMakeLists.txt
generator/: CMakeLists.txt
generator/group_info/: GroupInfoGenerator.wl  groupXXX.cuh.template  group_info.wls
generator/rule_point_data/: rule_point_data.h.template  rule_point_data.wls
generator/rule_point_expand/: rule_point_expand.h.template  rule_point_expand.wls
include/: CMakeLists.txt  lebedev_info.h
include/detail/: CMakeLists.txt  point_type.h  rule_info.h  rule_point_data.h  rule_point_expand.h  rule_point_summarize.h
include/lebedev/: CMakeLists.txt  lebedev_info.h  orientational_asymmetric_unit.h
include/lebedev/detail/: CMakeLists.txt  rule_info.h  rule_point_expand.h  rule_point_summary.h
include/lebedev/group_info/: CMakeLists.txt  device_helper.h  group2D009.cuh  group2D009.h  group3D225.cuh  group3D225.h  group3D229.cuh  group3D229.h  group3D230.cuh  group3D230.h
support/: CMakeLists.txt
support/rule_point_data/: CMakeLists.txt  extract.nb  gen_oh.nb  sphere_lebedev_rule.cpp
test/: CMakeLists.txt  lebedev_info_test.cpp  lebedev_info_test_helper.h
